--- a/app/design/frontend/default/rooja/template/catalog/navigation/top.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/navigation/top.phtml
@@ -26,27 +26,22 @@
 ?>
 <?php
 /**
- * Product list template
+ * Top menu for store
  *
- * @see Mage_Catalog_Block_Product_List
+ * @see Mage_Catalog_Block_Navigation
  */
 ?>
-</p></div>
+<?php
+/**
+ * $this->renderCategoriesMenuHtml() supports optional arguments:
+ * int Level number for list item class to start from
+ * string Extra class of outermost list items
+ * string If specified wraps children list in div with this class
+ */
+?>
+<?php //$_menu = $this->renderCategoriesMenuHtml(0,'level-top') ?>
+<?php $_menu = $this->menuToplevel() ?>
 
-<?php $top_sales = $this->homePageTopSales() ?>
-
-        <?php echo $top_sales; ?>
-        
-<script type="text/javascript">
-	jQuery(document).ready(function(){
-		jQuery(".homeSale p").hide();
-		jQuery(".homeSale").hover(function () {
-		    jQuery(this).find('p').fadeIn(500);
-		  }, 
-		  function () {
-		    jQuery(this).find('p').fadeOut(500);
-		  });
-	 });
-			
-</script>
-<div><p>
+<?php if($_menu): ?>
+        <?php echo $_menu ?>
+<?php endif ?>
