--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -95,129 +95,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 		<?php echo $this->getChildHtml('content') ?>
 	</div>
 </section>
-<section id="extraSales">
-	<div class="container">
-		<section id="endingSoon" class="clear">
-			<h2>Boutiques</h2>
-<?php 
-			$i = 1;
-			$categories = Mage::helper('catalog/category')->getStoreCategories();
-			foreach ($categories as $_category){
-			    if($_category->hasChildren()){
-			        $_category->getId(); // category id
-					if($_category->getId() ==5){
-			        foreach($_category->getChildren() as $subcategory){
-					$c = Mage::getModel('catalog/category')->load($subcategory->getId());
-			            if($c->getIsActive()){ // check if category is active
-							if ($c->getSale_start_time() == 'Y' || $c->getSale_start_time() == 'Yes' ) {
-								
-									echo '<article class="boutiqueDetails fl noMargin">';
-									
-									echo '<a href="'. $c->getURL() .'"><span><img src="/media/catalog/category/'. $c->getImage() .'"></span></a>';
-									
-									$i++;
-									
-						            echo '</article>';
-								}
-			            }
-			        }
-			}
-			    }
-			}
-			?>			
-			
-</section>
-		
-<br class="clear" />
-		<section id="boutiquesHome" class="col3 fl">
-			<h2>Sales Ending Soon</h2>
-			
-			<?php 
-$i = 1;
-$categories = Mage::helper('catalog/category')->getStoreCategories();
-foreach ($categories as $_category){
-    if($_category->hasChildren()){
-        $_category->getId(); // category id
-if($_category->getId() !=5){
-        foreach($_category->getChildren() as $subcategory){
-		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
-            if($c->getIsActive()){ // check if category is active
-				$twodays = strtotime(date('y-m-d H:G:00', strtotime("+2 days")));
-				$today = strtotime(date('y-m-d H:i:s'));
-				if (!$c->getSale_start_date() == null) {
-	                $startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
-					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
-				
-					if (timeBetweenNowAndDeadline($enddate) != 0 && $enddate < $twodays) {
-						if ($i % 2 == 0){
-						echo '<article class="saleDetails fl noMargin">';
-						} else {
-						echo '<article class="saleDetails fl">';
-						}
-						echo '<a href="'. $c->getURL() .'"><span><img src="/media/catalog/category/'. $c->getImage() .'"></span></a>';
-						echo '<h3><a href="'. $c->getURL() .'">' . $c->getName() . '</a></h3>';
-						echo '<p>'. date('M jS \a\t g:ia', $enddate) .'</p>';
-						echo '</article>';
-						$i++;
-					}
-				}
-            }
-        }
-}
-    }
-}
-?>
-			
-		</section>
-	
-	
-	<section id="upcomingSales" class="col1 fr noMargin">
-			<h2>Upcoming</h2>
-<?php 
-$i = 1;
-$sortedArrayByDates = array();
-foreach ($categories as $_category){
-    if($_category->hasChildren()){
-		$_category->getId(); // category id
-		if($_category->getId() !=5){
-		foreach($_category->getChildren() as $subcategory){
-			$c = Mage::getModel('catalog/category')->load($subcategory->getId());
-			if (!$c->getSale_start_date() == null) {
-				$tendays = strtotime(date('y-m-d H:G:00', strtotime("+10 days")));
-				$today = strtotime(date('y-m-d H:i:s'));
-				$startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
-				$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
-				if ($startdate > $today && $startdate < $tendays) {
-					$sortedArrayByDates[strtotime($c->getSale_start_date())][] = $c->getName();
-				}
-			}
-		}
-	}
-    }
-}
-
-ksort($sortedArrayByDates);
-foreach ($sortedArrayByDates as $date => $array)
-{
-	if ($i % 2 == 0){
-	echo '<article class="upcomingDate noMargin">';
-	} else {
-	echo '<article class="upcomingDate">';
-	}
-	echo '<h4>'.date('M d', $date).'</h4>';
-	echo '<ul>';
-    foreach ($array as $a)
-    {
-        echo '<li>'.$a.'</li>';
-    }
-    echo '</ul>';
-    echo '</article>';
-    $i++;
-}
-?>
-		</section>
-		</div>
-</section>
+	<?php 	echo $this->getLayout()->createBlock('cms/block')->setBlockId('homepage_boutique_collction')->toHtml()  	?>
 
 
 
