--- a/app/design/frontend/default/rooja/template/customer/widget/gender.phtml
+++ b/app/design/frontend/default/rooja/template/customer/widget/gender.phtml
@@ -26,13 +26,44 @@
 ?>
 
 
-<label for="<?php echo $this->getFieldId('gender')?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?php echo $this->__('Gender') ?></label>
+<?php 
+$baseUrl = $this->getUrl();
+$currentUrl = $this->helper('core/url')->getCurrentUrl();
+$filterUrl = $baseUrl.'customer/account/create';
+$filterUrlOne = $baseUrl.'customer/account/create/';
+
+	  if($currentUrl == $filterUrl)
+	  { 
+		$genderReqired = 1;
+      }
+	  else if($currentUrl == $filterUrlOne)
+	  { 
+		$genderReqired = 1;
+      }
+ ?>
+
+<label for="<?php echo $this->getFieldId('gender')?>"<?php if ($this->isRequired()) echo ' class="required"' ?> 
+<?php if ($genderReqired) echo ' class="required"' ?>>
+<?php if ($this->isRequired()) echo '<em>*</em>' ?>
+<?php if ($genderReqired) echo '<em>*</em>' ?>
+<?php echo $this->__('Gender') ?></label>
 <div class="input-box">
-    <select id="<?php echo $this->getFieldId('gender')?>" name="<?php echo $this->getFieldName('gender')?>" title="<?php echo $this->__('Gender') ?>"<?php if ($this->isRequired()):?> class="validate-select"<?php endif; ?> <?php echo $this->getFieldParams() ?>>
+    <select id="<?php echo $this->getFieldId('gender')?>" name="<?php echo $this->getFieldName('gender')?>" title="<?php echo $this->__('Gender') ?>" <?php if($this->isRequired()){ ?> class="validate-select"<?php } ?> <?php echo $this->getFieldParams() ?> >
         <?php $options = Mage::getResourceSingleton('customer/customer')->getAttribute('gender')->getSource()->getAllOptions();?>
         <?php $value = $this->getGender();?>
         <?php foreach ($options as $option):?>
+            <?php 
+			if($genderReqired)
+			{
+			if($option['value'])
+			{ ?>       
             <option value="<?php echo $option['value'] ?>"<?php if ($option['value'] == $value) echo ' selected="selected"' ?>><?php echo $option['label'] ?></option>
+            <?php 
+			}
+			}else
+			{ ?>
+            <option value="<?php echo $option['value'] ?>"<?php if ($option['value'] == $value) echo ' selected="selected"' ?>><?php echo $option['label'] ?></option>
+			<?php	} ?>
         <?php endforeach;?>
     </select>
 </div>
