Customer sign up page Gender issues

--- a/app/design/frontend/default/rooja/template/customer/widget/gender.phtml
+++ b/app/design/frontend/default/rooja/template/customer/widget/gender.phtml
@@ -29,8 +29,8 @@
 <?php 
 $baseUrl = $this->getUrl();
 $currentUrl = $this->helper('core/url')->getCurrentUrl();
-$filterUrl = $baseUrl.'customer/account/create';
-$filterUrlOne = $baseUrl.'customer/account/create/';
+$filterUrl = 'http://rooja.com/customer/account/create';
+$filterUrlOne = 'http://rooja.com/customer/account/create/';
 
 	  if($currentUrl == $filterUrl)
 	  { 
