--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -1,52 +1,121 @@
 <?php
+
 /**
+
  * Magento
+
  *
+
  * NOTICE OF LICENSE
+
  *
+
  * This source file is subject to the Academic Free License (AFL 3.0)
+
  * that is bundled with this package in the file LICENSE_AFL.txt.
+
  * It is also available through the world-wide-web at this URL:
+
  * http://opensource.org/licenses/afl-3.0.php
+
  * If you did not receive a copy of the license and are unable to
+
  * obtain it through the world-wide-web, please send an email
+
  * to license@magentocommerce.com so we can send you a copy immediately.
+
  *
+
  * DISCLAIMER
+
  *
+
  * Do not edit or add to this file if you wish to upgrade Magento to newer
+
  * versions in the future. If you wish to customize Magento for your
+
  * needs please refer to http://www.magentocommerce.com for more information.
+
  *
+
  * @category    design
+
  * @package     base_default
+
  * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
+
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+
  */
+
 ?>
+
 <?php
+
 /**
+
  * Product list template
+
  *
+
  * @see Mage_Catalog_Block_Product_List
+
  */
+
 ?>
+
 </p></div>
 
-<?php $top_sales = $this->homePageTopSales() ?>
 
-        <?php echo $top_sales; ?>
+
+<?php 
+
+
+
+$session = Mage::getSingleton('customer/session'); 
+
+$customer = $session->getCustomer();
+
+if($customer['gender']== 1)
+
+{
+
+    $this->homePageTopSales(1,4);
+
+} else
+
+{
+
+   $this->homePageTopSales(2,58);
+
+}
+
+ ?>
+
         
+
 <script type="text/javascript">
+
 	jQuery(document).ready(function(){
+
 		jQuery(".homeSale p").hide();
+
 		jQuery(".homeSale").hover(function () {
+
 		    jQuery(this).find('p').fadeIn(500);
+
 		  }, 
+
 		  function () {
+
 		    jQuery(this).find('p').fadeOut(500);
+
 		  });
+
 	 });
+
 			
+
 </script>
+
 <div><p>
