Facebook Login Module With New Theme

--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -131,4 +131,14 @@ jQuery(document).ready(function(){
 	//jQuery("img").lazyload();
 });
 </script>
+
+<!-- Facebook Login Issuese for (#_=_) -->
+<script type="text/javascript">
+if (window.location.hash == '#_=_')
+//window.location.hash = '';
+	window.location.hash = ''; // for older browsers, leaves a # behind
+    history.pushState('', document.title, window.location.pathname); // nice and clean
+    e.preventDefault(); // no page reload
+</script>
+
 <?php date_default_timezone_set('Asia/Calcutta'); ?>
